--- a/ui/src/app/goals/goal-list/goal-list.component.html
+++ b/ui/src/app/goals/goal-list/goal-list.component.html
@@ -33,3 +33,8 @@
 <div *ngIf="loading$ | async" style="text-align: center;">
     <app-loading-spinner></app-loading-spinner>
 </div>
+<div>
+  <div class="col-md-5">
+    <router-outlet></router-outlet>
+  </div>
+</div>
