--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,24 +1,30 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" (click)="toggleNavbar()">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a href="#" class="navbar-brand">GTRACKER</a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" [ngClass]="{ 'in': isNavbarCollapsed }">
       <ul class="nav navbar-nav">
-<!--          <li routerLinkActive="active"><a routerLink="/recipes" *ngIf="isAuthenticated">Recipes</a></li>-->
-          <li routerLinkActive="active">
-              <a routerLink="/goals" *ngIf="isAuthenticated">Goals</a>
-          </li>
-          <li routerLinkActive="active">
-              <a routerLink="/tasks" *ngIf="isAuthenticated">Tasks</a>
-          </li>
-        <li routerLinkActive="active"><a routerLink="/auth" *ngIf="!isAuthenticated">Authenticate</a></li>
-<!--        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>-->
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/goals">Goals</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/tasks">Tasks</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/auth">Authenticate</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a style="cursor: pointer;" *ngIf="isAuthenticated" (click)="onLogout()">Logout</a>
+        <li *ngIf="isAuthenticated">
+          <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
         </li>
       </ul>
     </div>
