--- a/ui/src/app/tasks/task-detail/task-detail.component.html
+++ b/ui/src/app/tasks/task-detail/task-detail.component.html
@@ -1,3 +1,6 @@
+<div class="backdrop" (click)="onClose()"></div>
+<div class="alert-box">
+
 <div class="row">
     <div class="col-xs-12">
 <!--        <div class="alert alert-danger" *ngIf="error">-->
@@ -49,4 +52,9 @@
             </div>
         </div>
     </div>
+</div>
+
+  <div class="alert-box-actions">
+    <button class="btn btn-primary" (click)="onClose()">Close</button>
+  </div>
 </div>
