--- a/ui/src/app/tasks/task-edit/task-edit.component.html
+++ b/ui/src/app/tasks/task-edit/task-edit.component.html
@@ -1,52 +1,61 @@
-<div class="row">
-    <div class="col-xs-12">
-        <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert>
-        <div *ngIf="isLoading" style="text-align: center;">
-            <app-loading-spinner></app-loading-spinner>
-        </div>
-        <form [formGroup]="taskForm" (ngSubmit)="onSubmit()" *ngIf="!error && !isLoading">
-            <div class="row">
+<div class="backdrop" (click)="onClose()"></div>
+<div class="alert-box">
+
+
+  <div class="row">
+      <div class="col-xs-12">
+          <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert>
+          <div *ngIf="isLoading" style="text-align: center;">
+              <app-loading-spinner></app-loading-spinner>
+          </div>
+          <form [formGroup]="taskForm" (ngSubmit)="onSubmit()" *ngIf="!error && !isLoading">
+              <div class="row">
+                  <div class="col-xs-12">
+                      <div class="form-group">
+                          <label for="name">Name</label>
+                          <input
+                                  type="text"
+                                  id="name"
+                                  formControlName="name"
+                                  class="form-control">
+                      </div>
+                      <div class="form-group">
+                          <label for="description">Description</label>
+                          <input
+                                  type="text"
+                                  id="description"
+                                  formControlName="description"
+                                  class="form-control">
+                      </div>
+                      <div class="form-group">
+                          <label for="frequency">Frequency</label>
+                          <select id="frequency" formControlName="frequency" class="form-control">
+                              <option value="Daily">Daily</option>
+                              <option value="Weekly">Weekly</option>
+                              <option value="Monthly">Monthly</option>
+                          </select>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="row">
                 <div class="col-xs-12">
-                    <button
-                            type="submit"
-                            class="btn btn-success"
-                            [disabled]="!taskForm.valid"
-                    >Save</button> |
-                    <button
-                            type="button"
-                            class="btn btn-danger"
-                            (click)="onCancel()"
-                    >Cancel</button>
+                  <button
+                    type="submit"
+                    class="btn btn-success"
+                    [disabled]="!taskForm.valid"
+                  >Save</button> |
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    (click)="onCancel()"
+                  >Cancel</button>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input
-                                type="text"
-                                id="name"
-                                formControlName="name"
-                                class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Description</label>
-                        <input
-                                type="text"
-                                id="description"
-                                formControlName="description"
-                                class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="frequency">Frequency</label>
-                        <select id="frequency" formControlName="frequency" class="form-control">
-                            <option value="Daily">Daily</option>
-                            <option value="Weekly">Weekly</option>
-                            <option value="Monthly">Monthly</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+              </div>
+          </form>
+      </div>
+  </div>
+  <div class="alert-box-actions">
+    <button class="btn btn-primary" (click)="onClose()">Close</button>
+  </div>
 </div>
