upd: CI/CD configuration

--- a/ui/src/app/tasks/task-detail/task-detail.component.html
+++ b/ui/src/app/tasks/task-detail/task-detail.component.html
@@ -17,12 +17,12 @@
             </div>
 
             <div class="characteristic">
-                <label cl>Completion Status</label>
+                <label cl>Description</label>
                 <h4 class="list-group-item-heading">{{ task.description }}</h4>
             </div>
 
             <div class="characteristic">
-                <label>Description</label>
+                <label>Frequency</label>
                 <p class="list-group-item-text">{{ task.frequency }}</p>
             </div>
 
